sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: '=' expected but ';' found.
  var k : Int=0
^