sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i
  var k : Int=0
  while (k==0) {
  l=getValueCount()
    k=1
  	for (i <- 0 to l-2){
    	if(isSmaller(i,i+1)==false){
      	swap(i,i+1)
      	k=0
    	}
    }
  }
}